# opengl_template

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/: engine.h
engine/lib/glad/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/lib/glad/src/: glad.c
engine/src/: engine.cpp
